# lairdubois-opencutlist-sketchup-extension

./: .gitignore  .rubocop.yml  CHANGELOG.md  CHANGLOG.md  CMakeLists.txt  Gemfile  README.md  report.html  threejs.html
.github/: FUNDING.yml
.github/workflows/: c-libs-make.yml  make-c-libs-macos.yml  make-c-libs-win.yml  make-c-libs.yml
docs/: 00-index.md  01-development.md  02-faq.md  tutorials.json
docs/json/: tutorials.json
docs/skp/: playground.skp  table_2017.skp  test_axes.skp  test_export.skp
sponsor/opencutlist-sponsor/pages/: _document.js
sponsor/opencutlist-sponsor/public/: sponsorWidget.js
src/: hu.js  hu.yml  ladb_opencutlist.rb  ladb_toolbox.rb
src/ladb_opencutlist/: main.rb
src/ladb_opencutlist/c/lib/: CMakeLists.txt
src/ladb_opencutlist/c/lib/Clipper2/: CMakeLists.txt
src/ladb_opencutlist/c/lib/Clipper2Wrapper/: CMakeLists.txt
src/ladb_opencutlist/c/lib/Clipper2Wrapper/include/clipper2/: clipper.wrapper.h  clipper.wrapper.hpp
src/ladb_opencutlist/c/lib/Clipper2Wrapper/src/: clipper.wrapper.cpp
src/ladb_opencutlist/c/lib/Clippy/: CMakeLists.txt
src/ladb_opencutlist/c/lib/Clippy/include/: clippy.h  clippy.hpp
src/ladb_opencutlist/c/lib/Clippy/src/: clippy.cpp  dllmain.cpp
src/ladb_opencutlist/c/lib/Imagy/: CMakeLists.txt
src/ladb_opencutlist/c/lib/Imagy/include/: imagy.h  imagy.image.h  stb_image.h
src/ladb_opencutlist/c/lib/Imagy/src/: imagy.cpp  imagy.image.cpp
src/ladb_opencutlist/c/lib/Nesty/: CMakeLists.txt
src/ladb_opencutlist/c/lib/Nesty/include/: nesty.engine.h  nesty.engine.hpp  nesty.h  nesty.hpp  nesty.structs.h  nesty.structs.hpp
src/ladb_opencutlist/c/lib/Nesty/src/: main.cpp  nesty.cpp  nesty.engine.cpp  nesty.structs.cpp
src/ladb_opencutlist/c/lib/Packy/: CMakeLists.txt
src/ladb_opencutlist/c/lib/Packy/include/: packy.engine.hpp  packy.hpp  packy.structs.hpp
src/ladb_opencutlist/c/lib/Packy/src/: main.cpp  packy.cpp  packy.engine.cpp  packy.structs.cpp
src/ladb_opencutlist/cpp/lib/: CMakeLists.txt
src/ladb_opencutlist/cpp/lib/Clipper2/include/clipper2/: clipper.offset.h
src/ladb_opencutlist/cpp/lib/Clipper2Utils/: CMakeLists.txt
src/ladb_opencutlist/cpp/lib/Clipper2Wrapper/: CMakeLists.txt
src/ladb_opencutlist/cpp/lib/Clipper2Wrapper/include/clipper2/: clipper.wrapper.hpp
src/ladb_opencutlist/cpp/lib/Clipper2Wrapper/src/: clipper.wrapper.cpp
src/ladb_opencutlist/cpp/lib/Clippy/: CMakeLists.txt
src/ladb_opencutlist/cpp/lib/Clippy/include/: clippy.hpp
src/ladb_opencutlist/cpp/lib/Clippy/src/: clippy.cpp  main.cpp
src/ladb_opencutlist/cpp/lib/Imagy/include/: imagy.hpp  imagy.image.hpp  stb_image_write.hpp
src/ladb_opencutlist/cpp/lib/Imagy/src/: imagy.cpp  imagy.image.cpp
src/ladb_opencutlist/cpp/lib/Packy/: CMakeLists.txt
src/ladb_opencutlist/cpp/lib/Packy/include/: optimizer.hpp  optimizer_builder.hpp  packy.hpp  packy.structs.hpp
src/ladb_opencutlist/cpp/lib/Packy/include/shape/: labeling.hpp  pole_of_inaccessibility.hpp
src/ladb_opencutlist/cpp/lib/Packy/src/: debug.cpp  debug_fn.cpp  labeling.cpp  main.cpp  packy.cpp  packy.engine.cpp  packy.structs.cpp  pole_of_inaccessibility.cpp  solver.hpp  solver_builder.hpp
src/ladb_opencutlist/cpp/lib/Xly/: CMakeLists.txt
src/ladb_opencutlist/cpp/lib/Xly/include/: xly.hpp
src/ladb_opencutlist/cpp/lib/Xly/src/: main.cpp  xly.cpp
src/ladb_opencutlist/cpp/lib/Zipy/: CMakeLists.txt
src/ladb_opencutlist/cpp/lib/Zipy/include/: zipy.hpp
src/ladb_opencutlist/cpp/lib/Zipy/src/: zipy.cpp
src/ladb_opencutlist/css/: ladb-opencutlist-icons.css
src/ladb_opencutlist/css/lib/: bootstrap-slider.css  bootstrap-slider.min.css  bootstrap.css  bootstrap.min.css  codemirror-hint-show-hint.css  codemirror-hint-show-hint.min.css  codemirror.css  codemirror.min.css  huebee.min.css  jquery-ui.css  jquery-ui.min.css  jquery-ui.theme.min.css  jstree.css  jstree.min.css  noty.css  noty.min.css
src/ladb_opencutlist/html/: viewer.html
src/ladb_opencutlist/js/: constants.js  dialog-tabs.js  dialog.js  main.js  polyfills.js  viewer.js
src/ladb_opencutlist/js/components/: fiddle.js  jquery.ladb.abstract-simple-textinput.js  jquery.ladb.abstract-textinput.js  jquery.ladb.editor-export.js  jquery.ladb.editor-formula.js  jquery.ladb.editor-label-layout.js  jquery.ladb.editor-label-offset.js  jquery.ladb.editor-label.js  jquery.ladb.editor-prices.js  jquery.ladb.editor-std-attributes.js  jquery.ladb.editor-std-prices.js  jquery.ladb.formula-editor.js  jquery.ladb.label-editor.js  jquery.ladb.leftbar.js  jquery.ladb.preset-widget.js  jquery.ladb.textinput-area.js  jquery.ladb.textinput-code.js  jquery.ladb.textinput-color.js  jquery.ladb.textinput-currency.js  jquery.ladb.textinput-dimension.js  (+9 more)
src/ladb_opencutlist/less/: _mixins.less  _variables.less  ladb-opencutlist.less
src/ladb_opencutlist/lib/: codemirror-mode-ruby.min.js
src/ladb_opencutlist/ruby/: constants.rb  main.rb  plugin.rb
src/ladb_opencutlist/style/: ocl_layout_colored.style  ocl_layout_colored_opaque.style  ocl_layout_colored_translucent.style  ocl_layout_monochrome_opaque.style  ocl_layout_monochrome_translucent.style  ocl_layout_no_color.style
src/ladb_opencutlist/twig/: dialog-modal.twig  dialog-tabs.twig  dialog.twig
src/ladb_toolbox/: config.json  main.rb
src/ladb_toolbox/css/: bootstrap.css  bootstrap.min.css  ladb-icons.css  ladb-toolbox.css  ladb.css  ladb_bottombar.css  ladb_box.css  ladb_header.css  ladb_icons.css  ladb_leftbar.css
src/ladb_toolbox/fonts/: ladb_toolbox.eot
src/ladb_toolbox/html/: dialog.html
src/ladb_toolbox/icomoon/: selection.json
src/ladb_toolbox/less/: _mixins.less  _variables.less  ladb-toolbox.less
src/ladb_toolbox/ruby/: app.rb  plugin.rb
src/ladb_toolbox/twig/: dialog.twig
test/: TC_Ladb_Formula.rb  TC_Ladb_Lib_Geometrix.rb  TC_Ladb_Parser_FormulaParser.rb  TC_Ladb_Utils_AxisUtils.rb  TC_Ladb_Utils_DimensionUtils.rb  TC_Lib_Clipper2.rb  TC_Lib_Clippy.rb  dimension_utils_test.rb
tools/: debug-sketchup.rb
tools/bootstrap/: config.json
tools/cursors/: cursors.afdesign
tools/icomoon/: selection.json
(+1130 files in other folders)
