# -------------------------------------------------------------------
#                            Clipper2

add_subdirectory(Clipper2)

# -------------------------------------------------------------------
#                         Clipper2Wrapper

add_subdirectory(Clipper2Wrapper)

# -------------------------------------------------------------------
#                             Clippy

add_subdirectory(Clippy)

# -------------------------------------------------------------------
#                             Imagy

add_subdirectory(Imagy)

# -------------------------------------------------------------------
#                             Nesty

add_subdirectory(Nesty)
