# -------------------------------------------------------------------
#                            Clipper2

add_subdirectory(Clipper2)

# -------------------------------------------------------------------
#                         Clipper2Utils

add_subdirectory(Clipper2Utils)

# -------------------------------------------------------------------
#                         Clipper2Wrapper

add_subdirectory(Clipper2Wrapper)

# -------------------------------------------------------------------
#                             Clippy

add_subdirectory(Clippy)

# -------------------------------------------------------------------
#                             Imagy

add_subdirectory(Imagy)

# -------------------------------------------------------------------
#                             Packy

add_subdirectory(Packy)

# -------------------------------------------------------------------
#                             Zipy

add_subdirectory(Zipy)
